# hackathons

./: .gitignore  README.md
basketball/: CMakeLists.txt  basketball_dribble.cpp
segment-anything/: .gitignore  CMakeLists.txt  README.md  sam-wireframe.cpp  sam.cpp  sam.h  sam_core.cpp  sam_encoder.cpp  sam_encoder.h  sam_ggml_state.h  sam_graph.cpp  sam_graph.h  sam_image.h  sam_params.h  sam_postprocess.cpp  sam_postprocess.h  sam_utils.cpp  sam_utils.h
segment-anything/.sam-copy/: sam.h
segment-anything/examples/: CMakeLists.txt
